<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context="pengruijiwei.chess.com.chess.Activity_Main">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#6101b5b2"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#d0ffffff"
        android:padding="5dp"
        android:text="@string/record"
        android:onClick="jumptoRecord"
        android:textSize="20sp"
        android:layout_marginBottom="41dp"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#d0ffffff"
        android:padding="5dp"
        android:text="@string/contin"
        android:onClick="jumptoPlayBack"
        android:textSize="20sp"
        android:layout_marginBottom="48dp"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:background="@color/bright_foreground_material_light"
        android:onClick="jumptoGame"
        android:padding="5dp"
        android:text="@string/play"
        android:textSize="20sp"
        android:textColor="@color/abc_primary_text_disable_only_material_light"
        android:backgroundTint="#d0ffffff"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:textStyle="normal|bold|italic" />

    <Button
        android:id="@+id/button4"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/abc_input_method_navigation_guard"
        android:onClick="exit"
        android:padding="5dp"
        android:text="@string/exit"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#81ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff" />



</RelativeLayout>