<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context="pengruijiwei.chess.com.chess.Activity_Game">

    <TextView
        android:id="@+id/tv_turn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:background="#62f4f9f8"
        android:paddingBottom="5dp"
        android:paddingLeft="50dp"
        android:paddingTop="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#F0EEEC" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#8d01b594"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    
    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#707070" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn"
            android:onClick="Click4Undo"
            android:text="@string/undo" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn"
            android:onClick="AIClick"
            android:text="@string/ai" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn"
            android:onClick="Click4Draw"
            android:text="@string/draw" />
        
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn"
            android:onClick="Click4Resign"
            android:text="@string/resign" />
    </LinearLayout>

    <pengruijiwei.chess.com.view.View_of_Game
        android:id="@+id/sf_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_turn"
        android:layout_above="@id/ll_btns" />

    

</RelativeLayout>